<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:contentDescription="@string/content_description_filter"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/filter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/launcher"
        android:contentDescription="@string/content_description_launcher"
        android:icon="@drawable/ic_launch"
        android:title="@string/launcher"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu"
        android:contentDescription="@string/menu_home"
        android:icon="@drawable/ic_menu_24"
        android:title="@string/menu_home"
        app:showAsAction="always" />

</menu>